Clean up legacy state code